other/k8s-portal/portal/apps/.helm/templates/90-ingress.yml
# apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portal-ingress
spec:
  rules:
    # - host: k8s-portal.local-env
    - http:
        paths:
          - path: /api/pyapi/
            backend:
              serviceName: portal-pyapi
              servicePort: 80
          - path: /
            backend:
              serviceName: portal-ngui
              servicePort: 80
